--- a/HealthCentre/templates/HealthCentre/index.html
+++ b/HealthCentre/templates/HealthCentre/index.html
@@ -2,7 +2,7 @@
 
 
 {% block title %}
-    'Nandakumaran Dental Care'
+    Clinical- Dashboard
 {% endblock %}
 
 
@@ -21,61 +21,84 @@
 {% block bodytag %}
 
     {% load static %}
-    <body background="{% static 'HealthCentre/images/plain.jpg' %}" style="background-size: auto auto;">
+    <body >
 
 {% endblock %}
 
 
 {% block body %}
 
-    <div style="text-align:center;margin: 0 auto;"class="alert alert-danger" role="alert">
-        Get a checkup immediately!!
+<!--Container to hold the Appointment-->
+    <div class="container-fluid-sm homeAppointments">
+        
+        <!--Row 1 to hold columns-->
+        <div class="row appointmentrow ">
+
+            <!--Column 1 to hold content-->
+            <div class="col-md appointmentcolumn">
+                <div class="mainAppointment makeItFlex">
+                    <p>Appointment</p>
+                    
+                </div>
+            </div>
+
+            <!--Column 1 to hold content-->
+            <div class="col-md appointmentrow">
+                <ul class="container-fluid justify-content-center">
+                    <!--This below should repeat as a list item using python and data from backend-->
+                    <li class="col-fluid-md" style="list-style: none;">
+                        <div class="appointListItem">
+                        <div class="datalist">1</div>
+                        <div class="datalist">Name</div>
+                        <div class="datalist">Location</div>
+                        <div class="datalist">Date</div>
+                        </div>
+                    </li>
+
+                    <li class="col-fluid-md" style="list-style: none;">
+                        <div class="appointListItem">
+                        <div class="datalist">2</div>
+                        <div class="datalist">Name</div>
+                        <div class="datalist">Location</div>
+                        <div class="datalist">Date</div>
+                    </div>
+                    </li>
+
+                    <li class="col-fluid-md" style="list-style: none;">
+                        <div class="appointListItem">
+                        <div class="datalist">3</div>
+                        <div class="datalist">Name</div>
+                        <div class="datalist">Location</div>
+                        <div class="datalist">Date</div>
+                    </div>
+                    </li>
+
+                    <li class="col-fluid-md" style="list-style: none;">
+                        <div class="appointListItem">
+                        <div class="datalist">4</div>
+                        <div class="datalist">Name</div>
+                        <div class="datalist">Location</div>
+                        <div class="datalist">Date</div>
+                    </div>
+                    </li>
+                    
+                </ul>
+            </div>
+
+        </div>
     </div>
 
 
-    <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-
-        <!-- <div class="carousel-inner">
-
-            <div class="carousel-item active">
-                <img src="{% static 'HealthCentre/images/dent.jpg' %}" class="d-block w-100 " alt="Dental care" >
-                <div class="carousel-caption d-none d-md-block ">
-                    <h5>Welcome To Dr. Nandhakumaran Dental Care</h5>
-                    <p>Good health is one of life's greatest blessings. Eat well!</p>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="{% static 'HealthCentre/images/dent1.jpg' %}" class="d-block w-100 " alt="Beautiful smile" >
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Smile please, always!</h5>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="{% static 'HealthCentre/images/dent3.jpg' %}" class="d-block w-100 " alt="get altered" >
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>To enjoy the healthy food, you must brush your teeth!</h5>
-                </div>
-            </div>
-
-        </div> -->
-
-        <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-
-        <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-
+<!--Container to hold data cells-->
+    <div class="container-fluid" >
+        <div class="row">
+            <div class="col datacols">Registerd Patients</div>
+            <div class="col datacols">Completed Appointments</div>
+        </div>
+        <div class="row">
+            <div class="col datacols">Revenue</div>
+            <div class="col datacols">Analytics</div>
+        </div>
     </div>
 
     {% if request.session.isLoggedIn %}
@@ -89,10 +112,12 @@
       </div>
     {% endif %}
 
+
+    <!--
     <div>
         <hr class="my-4">
-        <h1 class ="display-3"style="text-align:center;color:black">BENEFITS</h1>
-        <li class="dropdown-divider" style="margin-left:25%;margin-right:25%;border-color:black"></li>
+        <h1 class ="display-3"style="text-align:center;color:white">Footer Zone</h1>
+        <li class="dropdown-divider" style="margin-left:25%;margin-right:25%;border-color:rgb(255, 255, 255)"></li>
 
         <div class="row"style="margin: 0 auto;" >
 
@@ -154,11 +179,11 @@
 
         </div>
     </div>
-
-    <div id="Footer">
+-->
+    <div id="Footer" style="bottom: 0;width: 100%;">
         <h6 style="text-align:center;color:black;background-color:#dddddd;margin: 0 auto;">
             <hr class="my-4"style="margin: 0 auto;" >
-                ©2023 All Rights Reserved, Dr. Nandakumaran
+                ©2024 All Rights Reserved, QDPunDay Technologies
                 <br>
                 <br>
         </h6>
