--- a/HealthCentre/templates/HealthCentre/layout.html
+++ b/HealthCentre/templates/HealthCentre/layout.html
@@ -57,7 +57,11 @@
                     {% if request.session.isLoggedIn %}
                     {% if request.session.isDoctor %}
                     <li class="nav-item listitem">
-                        <a class="nav-link " href="{% url 'login' %}" style="color:black">Your Prescriptions </a>
+                        <a class="nav-link " href="{% url 'dashboard' %}" style="color:black">Dashboard </a>
+                        {% comment %} <span class="badge badge-primary badge-pill">{{ request.session.numberNewPrescriptions }} NEW</span> {% endcomment %}
+                    </li>
+                    <li class="nav-item listitem">
+                        <a class="nav-link " href="{% url 'yourPrescriptions' %}" style="color:black">Your Prescriptions </a>
                         {% comment %} <span class="badge badge-primary badge-pill">{{ request.session.numberNewPrescriptions }} NEW</span> {% endcomment %}
                     </li>
                     <li class="nav-item listitem">
