--- a/HealthCentre/templates/HealthCentre/loginPortal.html
+++ b/HealthCentre/templates/HealthCentre/loginPortal.html
@@ -60,6 +60,9 @@ Clinical-Login
 
                     <br>
                     <button type="submit" class="btn btn-success btn-lg" style="width:100%;margin: auto;">Login</button>
+                    <li class="nav-item listitem">
+                        <a class="nav-link" href="{% url 'passwordResetReq' %}" style="color:blue"> Forgot password? </a>
+                    </li>
                     <br>
                     <br>
                     <br>
