--- a/staticfiles/HealthCentre/css/styles.css
+++ b/staticfiles/HealthCentre/css/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 .hideout {
-    display: none;
+    visibility: hidden;
 }
 
 .makeItFlex {
@@ -19,7 +19,7 @@ body {
 }
 
 .hidein {
-    display: block;
+    visibility: visible;
 }
 
 .navstyle {
@@ -278,10 +278,10 @@ body {
 
 
 
-.hidein {
+/* .hidein {
     visibility: none;
     display: none;
-}
+} */
 
 
 
