--- a/HealthCentre/templates/HealthCentre/NewPrescription.html
+++ b/HealthCentre/templates/HealthCentre/NewPrescription.html
@@ -67,7 +67,7 @@ Clinical-Prescription
       <br>
       <!-- </form> -->
     
-      <style>
+     <!-- <style>
         .prescription-table {
           width: 100%;
           border-collapse: collapse;
@@ -93,7 +93,7 @@ Clinical-Prescription
           background-color: #f5f5f5;
           padding: 10px;
         }
-    </style>
+    </style> -->
     <!-- style="margin-right: 90%;" -->
     <form class = "Backpanel" method="post" enctype="multipart/form-data" action="{% url 'uploadImage' %}" >
       {% csrf_token %}
@@ -247,8 +247,6 @@ Clinical-Prescription
             <h4 class="form-group" style="color:rgb(0, 0, 0);">days </h4>
           </div>
 
-          
-          
           <!-- <div class="form-group">
               <label for="exampleFormControlTextarea1" style = "color:white">Please type the symptoms.</label>
               <textarea name = "symptoms" class="form-control"  rows="5" placeholder="Symptoms"></textarea>
